--- a/AliPlayerDemo/Podfile
+++ b/AliPlayerDemo/Podfile
@@ -7,10 +7,11 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 target 'AliPlayerDemo' do
 
-  pod 'WoodPeckeriOS', :configurations => ['Debug']
+#  pod 'WoodPeckeriOS', :configurations => ['Debug']
   pod 'Masonry'
-  pod 'AliPlayerSDK_iOS', '5.2.2' # 播放报错，有错误日志
+#  pod 'AliPlayerSDK_iOS', '5.2.2' # 播放报错，有错误日志
 #  pod 'AliPlayerSDK_iOS', '5.2.1' # 无法播放，连错误日志都没有
 #  pod 'AliPlayerSDK_iOS', '5.1.6' # 正常播放
+  pod 'AliPlayerSDK_iOS', '5.4.3.0-15262825' # 测试最新的SDK
 
 end
